# cppdict

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt  conaninfo.txt
include/: attr.hpp  concepts.hpp  consoleReadWriter.hpp  deserializer.hpp  entry.hpp  serializer.hpp  stringLiteral.hpp
include/serializer/: qtxml.hpp  stdcio.hpp
src/: main.cpp
test/: data.hpp  qtxml.cpp  stdcio.cpp
