cmake_minimum_required(VERSION 3.10)

set(PROJECT_NAME "cppdict")
project(${PROJECT_NAME} CXX)

set(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_COMPILER clang++)

set(SOURCE_DIR src)
set(INCLUDE_DIR include)
set(TEST_SOURCE_DIR test)

option(CPPDICT_STDCIO_SERIALIZER "std::cin/std::cout" ON)
set(CPPDICT_SERIALIZER_OPTIONS "${CPPDICT_STDCIO_SERIALIZER};stdcio.cpp")

set(TEST_SOURCE_FILES "${PROJECT_SOURCE_DIR}/${TEST_SOURCE_DIR}/data.hpp")
foreach(CPPDICT_SERIALIZER_INFO "${CPPDICT_SERIALIZER_OPTIONS}")
  list(GET CPPDICT_SERIALIZER_INFO 0 CPPDICT_SERIALIZER_FLAG)

  if(CPPDICT_SERIALIZER_FLAG)
    list(GET CPPDICT_SERIALIZER_INFO 1 CPPDICT_SERIALIZER_TEST_FILE)
    get_filename_component(CPPDICT_SELECTED_SERIALIZER ${CPPDICT_SERIALIZER_TEST_FILE} "NAME_WE")

    message(STATUS "Selected: ${CPPDICT_SELECTED_SERIALIZER}")
    list(APPEND TEST_SOURCE_FILES "${PROJECT_SOURCE_DIR}/${TEST_SOURCE_DIR}/${CPPDICT_SERIALIZER_TEST_FILE}")
    break()
  endif()
endforeach()

include_directories(${INCLUDE_DIR})
add_executable(${PROJECT_NAME}  ${TEST_SOURCE_FILES})

