cmake_minimum_required(VERSION 3.10)

set(PROJECT_NAME "cppdict")
project(${PROJECT_NAME} CXX)

set(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_COMPILER clang++)

set(SOURCE_DIR src)
set(INCLUDE_DIR include)
set(TEST_SOURCE_DIR test)

option(CPPDICT_QTXML_SERIALIZER "Qt stream reader/writer" OFF)
option(CPPDICT_STDCIO_SERIALIZER "std::cin/std::cout" ON)
list(APPEND CPPDICT_SERIALIZER_OPTIONS "${CPPDICT_QTXML_SERIALIZER},qtxml.cpp")
list(APPEND CPPDICT_SERIALIZER_OPTIONS "${CPPDICT_STDCIO_SERIALIZER},stdcio.cpp")

set(TEST_SOURCE_FILES "${PROJECT_SOURCE_DIR}/${TEST_SOURCE_DIR}/data.hpp")
foreach(CPPDICT_SERIALIZER_INFO ${CPPDICT_SERIALIZER_OPTIONS})
  string(REPLACE "," ";" CPPDICT_SERIALIZER_INFO_LIST ${CPPDICT_SERIALIZER_INFO})
  list(GET CPPDICT_SERIALIZER_INFO_LIST 0 CPPDICT_SERIALIZER_FLAG)

  if(CPPDICT_SERIALIZER_FLAG)
    list(GET CPPDICT_SERIALIZER_INFO_LIST 1 CPPDICT_SERIALIZER_TEST_FILE)
    get_filename_component(CPPDICT_SELECTED_SERIALIZER ${CPPDICT_SERIALIZER_TEST_FILE} "NAME_WE")

    message(STATUS "Selected: ${CPPDICT_SELECTED_SERIALIZER}")
    list(APPEND TEST_SOURCE_FILES "${PROJECT_SOURCE_DIR}/${TEST_SOURCE_DIR}/${CPPDICT_SERIALIZER_TEST_FILE}")
    break()
  endif()
endforeach()

include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
conan_basic_setup()

message(STATUS "STCS: ${TEST_SOURCE_FILES}")

include_directories(${INCLUDE_DIR})
add_executable(${PROJECT_NAME}  ${TEST_SOURCE_FILES})
target_link_libraries(${PROJECT_NAME} ${CONAN_LIBS})

